# cpp_project_example

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
data/example/: input.json
src/: CMakeLists.txt  main.cpp
src/graph/: Graph.cpp  Graph.h
src/io/: Reader.cpp  Reader.h  Writer.cpp  Writer.h
test/: testGraph.cpp  testReadWrite.cpp
